--- a/app/templates/components/new-post.hbs
+++ b/app/templates/components/new-post.hbs
@@ -1,41 +1,41 @@
-<div>
+<div class="ui form">
   <form>
-    <div class="form-group">
+    <div class="field">
       <label for="author">Author</label>
-      {{input value=author id="author"}}
+      {{input value=author id="author2"}}
     </div>
 
-    <div class="form-group">
+    <div class="field">
       <label for="title">Title</label>
       {{input value=title id="title"}}
     </div>
 
-    <div class="form-group">
+    <div class="field">
       <label for="content">Content</label>
-      {{input value=content id="content"}}
+      {{textarea value=content id="content"}}
     </div>
 
-    <div class="form-group">
+    <div class="field">
       <label for="date">Date</label>
-      {{input value=date id="date"}}
+      {{input value=date id="date2"}}
     </div>
 
-    <div class="form-group">
+    <div class="field">
       <label for="tags">Tag</label>
       {{input value=tags id="tags"}}
     </div>
 
-    <div class="form-group">
+    <div class="field">
       <label for="category">Category</label>
       {{input value=category id="category"}}
     </div>
 
-    <div class="form-group">
+    <div class="field">
       <label for="image">Image URL</label>
       {{input value=image id="image"}}
     </div>
 
-    <div class="form-group">
+    <div class="field">
       <label for="abstract">Post Abstract</label>
       {{input value=abstract id="abstract"}}
     </div>
