--- a/app/templates/components/new-comment.hbs
+++ b/app/templates/components/new-comment.hbs
@@ -1,18 +1,18 @@
 <h1>New Comment</h1>
-  <div>
+  <div class="ui form">
     <form>
-      <div class="form-group">
+      <div class="field">
         <label for="name">Name</label>
         {{input value=name id="name"}}
       </div>
-      <div class="form-group">
+      <div class="field">
         <label for="url">url</label>
         {{input value=url id="url"}}
       </div>
-      <div class="form-group">
+      <div class="field">
         <label for="content">Content</label>
-        {{input value=content id="content"}}
+        {{textarea value=content id="content"}}
       </div>
-      <button {{action 'saveComment'}}>Save</button>
+      <button class="positive ui button" {{action 'saveComment'}}>Save</button>
     </form>
   </div>
