--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,7 +3,7 @@
       <a href="/" class="header item">
         HUNTN'FISH
       </a>
-      <a href="#" class="item">Home</a>
+      <a href="/" class="item">Home</a>
     </div>
     <div class="ui button nav navbar-nav navbar-right blue item" {{action 'toggleSidebar' 'sub-sidebar'}}>{{fa-icon "bars"}}</div>
 </div>
